inference of sft job

--- a/Demos/SFT_PubMed_Summarization/sft_pubmed_summarization.ipynb
+++ b/Demos/SFT_PubMed_Summarization/sft_pubmed_summarization.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,10 +275,10 @@
      "output_type": "stream",
      "text": [
       "Uploading training file...\n",
-      "Training file ID: file-3039c4ac7c324ea88f9743ad1a4caf19\n",
+      "Training file ID: file-ec3b10b628ed484dbc5e29d8903b2e70\n",
       "\n",
       "Uploading validation file...\n",
-      "Validation file ID: file-24238eb91fea4e188217cc410a21502a\n"
+      "Validation file ID: file-14566dd22ab847699434ac991d673b6f\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
      "text": [
       "Creating supervised fine-tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-0642f7186ee44b3083c35810814c1d4e\n",
+      "Job ID: ftjob-b21944c368704dabae4963451a0e5c52\n",
       "Status: pending\n",
       "Model: gpt-4.1-2025-04-14\n"
      ]
@@ -389,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: pending\n"
+      "Status: succeeded\n"
      ]
     }
    ],
@@ -416,9 +416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuned Model ID: gpt-4.1-2025-04-14.ft-b21944c368704dabae4963451a0e5c52-pubmed-summarization\n"
+     ]
+    }
+   ],
    "source": [
     "completed_job = openai_client.fine_tuning.jobs.retrieve(fine_tune_job.id)\n",
     "\n",
@@ -440,9 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deploying fine-tuned model: gpt-4.1-2025-04-14.ft-b21944c368704dabae4963451a0e5c52-pubmed-summarization\n",
+      "Waiting for deployment to complete...\n",
+      "Model deployment completed: gpt-4.1-pubmed-finetuned\n"
+     ]
+    }
+   ],
    "source": [
     "from azure.mgmt.cognitiveservices import CognitiveServicesManagementClient\n",
     "from azure.mgmt.cognitiveservices.models import Deployment, DeploymentProperties, DeploymentModel, Sku\n",
@@ -451,12 +469,12 @@
     "resource_group = os.environ.get(\"AZURE_RESOURCE_GROUP\")\n",
     "account_name = os.environ.get(\"AZURE_AOAI_ACCOUNT\")\n",
     "\n",
-    "deployment_name = \"gpt-4o-pubmed-finetuned\"\n",
+    "deployment_name = \"gpt-4.1-pubmed-finetuned\"\n",
     "\n",
     "with CognitiveServicesManagementClient(credential=credential, subscription_id=subscription_id) as cogsvc_client:\n",
     "    deployment_model = DeploymentModel(format=\"OpenAI\", name=fine_tuned_model_id, version=\"1\")\n",
     "    deployment_properties = DeploymentProperties(model=deployment_model)\n",
-    "    deployment_sku = Sku(name=\"GlobalStandard\", capacity=50)\n",
+    "    deployment_sku = Sku(name=\"GlobalStandard\", capacity=100)\n",
     "    deployment_config = Deployment(properties=deployment_properties, sku=deployment_sku)\n",
     "    \n",
     "    print(f\"Deploying fine-tuned model: {fine_tuned_model_id}\")\n",
@@ -484,21 +502,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Background: Alzheimer's disease (AD) is a progressive neurodegenerative disorder characterized by cognitive decline and memory loss. Recent studies have suggested that neuroinflammation plays a crucial role in disease pathogenesis.Objective: This study investigated the role of microglial activation and inflammatory cytokines in early-stage Alzheimer's disease progression.Methods: We conducted a longitudinal study of 150 patients with mild cognitive impairment (MCI) over 36 months. Cerebrospinal fluid (CSF) samples were analyzed for inflammatory markers including IL-6, TNF-α, and IL-1β. Brain imaging using PET scans assessed microglial activation.Results: Patients who progressed to AD showed significantly elevated levels of IL-6 (p<0.001) and TNF-α (p<0.01) at baseline compared to stable MCI patients. Microglial activation was observed in the hippocampus and entorhinal cortex regions. Multivariate analysis revealed that combined inflammatory markers predicted AD conversion with 78% accuracy.Conclusion: Elevated neuroinflammatory markers and microglial activation in MCI patients are associated with increased risk of progression to Alzheimer's disease, suggesting potential therapeutic targets for early intervention.\n"
+     ]
+    }
+   ],
    "source": [
-    "test_article = \"\"\"Background: Alzheimer's disease (AD) is a progressive neurodegenerative disorder characterized by cognitive decline and memory loss. Recent studies have suggested that neuroinflammation plays a crucial role in disease pathogenesis. Objective: This study investigated the role of microglial activation and inflammatory cytokines in early-stage Alzheimer's disease progression. Methods: We conducted a longitudinal study of 150 patients with mild cognitive impairment (MCI) over 36 months. Cerebrospinal fluid (CSF) samples were analyzed for inflammatory markers including IL-6, TNF-α, and IL-1β. Brain imaging using PET scans assessed microglial activation. Results: Patients who progressed to AD showed significantly elevated levels of IL-6 (p<0.001) and TNF-α (p<0.01) at baseline compared to stable MCI patients. Microglial activation was observed in the hippocampus and entorhinal cortex regions. Multivariate analysis revealed that combined inflammatory markers predicted AD conversion with 78% accuracy. Conclusion: Elevated neuroinflammatory markers and microglial activation in MCI patients are associated with increased risk of progression to Alzheimer's disease, suggesting potential therapeutic targets for early intervention.\"\"\"\n",
+    "from openai import AzureOpenAI\n",
     "\n",
-    "response = openai_client.responses.create(\n",
-    "    model=deployment_name,\n",
-    "    input=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a medical research summarization assistant. Create concise, accurate abstracts of medical research articles that capture the key findings and clinical implications.\"},\n",
-    "        {\"role\": \"user\", \"content\": f\"Summarize this medical research article:\\n\\n{test_article}\"}\n",
-    "    ]\n",
+    "azure_endpoint = f\"https://{account_name}.cognitiveservices.azure.com/\"\n",
+    "\n",
+    "client = AzureOpenAI(\n",
+    "    azure_endpoint=azure_endpoint,\n",
+    "    api_key=credential.get_token(\"https://cognitiveservices.azure.com/.default\").token,\n",
+    "    api_version=\"2024-12-01-preview\"\n",
     ")\n",
     "\n",
-    "print(response.output_text)"
+    "test_article = \"\"\"Background: Alzheimer's disease (AD) is a progressive neurodegenerative disorder characterized by cognitive decline and memory loss. Recent studies have suggested that neuroinflammation plays a crucial role in disease pathogenesis. Objective: This study investigated the role of microglial activation and inflammatory cytokines in early-stage Alzheimer's disease progression. Methods: We conducted a longitudinal study of 150 patients with mild cognitive impairment (MCI) over 36 months. Cerebrospinal fluid (CSF) samples were analyzed for inflammatory markers including IL-6, TNF-α, and IL-1β. Brain imaging using PET scans assessed microglial activation. Results: Patients who progressed to AD showed significantly elevated levels of IL-6 (p<0.001) and TNF-α (p<0.01) at baseline compared to stable MCI patients. Microglial activation was observed in the hippocampus and entorhinal cortex regions. Multivariate analysis revealed that combined inflammatory markers predicted AD conversion with 78% accuracy. Conclusion: Elevated neuroinflammatory markers and microglial activation in MCI patients are associated with increased risk of progression to Alzheimer's disease, suggesting potential therapeutic targets for early intervention.\"\"\"\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=deployment_name,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a medical research summarization assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": f\"Summarize this medical research article:\\n\\n{test_article}\"}\n",
+    "    ],\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=500\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
    ]
   },
   {
