updating job details

--- a/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
+++ b/Demos/RFT_Math_Reasoning/rft_math_reasoning.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -497,8 +497,8 @@
      "text": [
       "Uploading training file...\n",
       "Uploading validation file...\n",
-      "Training file ID: file-f0022bb49b1f4381a30491109dc9b46e\n",
-      "Validation file ID: file-a96397f30c8d4effb5609cca94f78655\n"
+      "Training file ID: file-1f8e456101a24bd6b65d5e9abb07ffa0\n",
+      "Validation file ID: file-f3a9e606860246c29b43d574a532b198\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
      "text": [
       "Creating Reinforcement Fine-Tuning job...\n",
       "Fine-tuning job created!\n",
-      "Job ID: ftjob-9fd84ed126a048dc9e22976ee2cc8346\n",
+      "Job ID: ftjob-a4469af256b34073846f59d903fb9e95\n",
       "Status: pending\n",
       "Model: o4-mini-2025-04-16\n"
      ]
@@ -618,14 +618,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: pending\n"
+      "Status: succeeded\n"
      ]
     }
    ],
@@ -645,14 +645,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status: pending\n"
+      "Fine-tuned Model ID: o4-mini-2025-04-16.ft-a4469af256b34073846f59d903fb9e95-math-reasoning-rft\n"
      ]
     }
    ],
@@ -679,7 +679,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deploying fine-tuned model: o4-mini-2025-04-16.ft-a4469af256b34073846f59d903fb9e95-math-reasoning-rft\n",
+      "Waiting for deployment to complete...\n",
+      "Model deployment completed: o4-mini-math-reasoning-rft\n"
+     ]
+    }
+   ],
    "source": [
     "from azure.mgmt.cognitiveservices import CognitiveServicesManagementClient\n",
     "from azure.mgmt.cognitiveservices.models import Deployment, DeploymentProperties, DeploymentModel, Sku\n",
@@ -721,24 +731,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1. Subtract 7 from both sides:  \n",
+      "3x + 7 − 7 = 22 − 7  \n",
+      "⟹ 3x = 15  \n",
+      "\n",
+      "Step 2. Divide both sides by 3:  \n",
+      "x = 15/3  \n",
+      "⟹ x = 5  \n",
+      "\n",
+      "Answer: \\boxed{5}\n"
+     ]
+    }
+   ],
    "source": [
-    "test_problem = \"\"\"Solve for x: 3x + 7 = 22\"\"\"\n",
+    "from openai import AzureOpenAI\n",
     "\n",
-    "print(\"Testing fine-tuned model...\")\n",
-    "print(f\"Problem:{test_problem}\")\n",
+    "azure_endpoint = f\"https://{account_name}.cognitiveservices.azure.com/\"\n",
     "\n",
-    "response = openai_client.responses.create(\n",
-    "    model=deployment_name,\n",
-    "    input=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a mathematical reasoning assistant. Solve problems step-by-step, showing your work clearly. Provide the final answer in \\\\boxed{} format.\"},\n",
-    "        {\"role\": \"user\", \"content\": test_problem}\n",
-    "    ]\n",
+    "client = AzureOpenAI(\n",
+    "    azure_endpoint=azure_endpoint,\n",
+    "    api_key=credential.get_token(\"https://cognitiveservices.azure.com/.default\").token,\n",
+    "    api_version=\"2024-12-01-preview\"\n",
     ")\n",
     "\n",
-    "print(f\"Model Response:{response.output_text}\")\n"
+    "test_problem = \"\"\"Solve for x: 3x + 7 = 22\"\"\"\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=deployment_name,\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a mathematical reasoning assistant. Solve problems step-by-step, showing your work clearly. Provide the final answer in \\\\boxed{} format.\"},\n",
+    "        {\"role\": \"user\", \"content\": test_problem}\n",
+    "    ],\n",
+    "    max_completion_tokens=40000,\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Congratulations!\n",
+    "\n",
+    "You've successfully fine-tuned a model for mathematical reasoning using Reinforcement Fine-Tuning (RFT) with the OpenR1-Math-220k dataset!"
    ]
   }
  ],
